# kaleidosync

./: .dockerignore  .env  .env.example  .env.local.example  .gitignore  BUILD.bazel  MODULE.bazel  README.md  components.d.ts  docker-compose.yml  package-lock.json  package.json  server.js  setup-blackhole.sh  setup.sh  vite.config.ts
.github/workflows/: deploy.yml
api/: server.js
docker/: Dockerfile
docs/integrations/: surface-oracle-port-plan.md
src/: App.vue  audio-level.ts  main.ts  routes.generated.ts
src/components/: AppRoot.vue  AudioDebugMeter.vue  AudioSources.vue  BeatHorizon.vue  FractalTraverse.vue  HomepageHero.vue  Menu.vue  PizzaPresetHud.vue  PrismVeil.vue  PulseOverlay.vue  Renderer.vue  SurfaceOracle.vue  SurfaceOracleHud.vue  index.ts
src/pages/: audius.playlists.[id].vue  audius.users.[id].vue  audius.vue  design.vue  g.[id].vue  settings.vue  visualizer.vue
src/sage-router-pages/: SageRouterView.vue  index.ts  sage-router.ts
src/stores/: audio-features.ts  pizza-preset-lab.ts  pulse.ts  sources.ts  surface-oracle.ts  visualizer-settings.ts
src/surface-oracle/: height-field.ts  types.ts
tools/bazel/: api.sh  build.sh  dev-blackhole.sh  dev.sh  docker-down.sh  docker-up.sh  setup-blackhole.sh  setup.sh  start-blackhole.sh  start.sh
tools/docker/: compose.sh
