load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

sh_binary(
    name = "setup",
    srcs = ["tools/bazel/setup.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "dev",
    srcs = ["tools/bazel/dev.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "api",
    srcs = ["tools/bazel/api.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "setup_blackhole",
    srcs = ["tools/bazel/setup-blackhole.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "build",
    srcs = ["tools/bazel/build.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "start",
    srcs = ["tools/bazel/start.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "dev_blackhole",
    srcs = ["tools/bazel/dev-blackhole.sh"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "start_blackhole",
    srcs = ["tools/bazel/start-blackhole.sh"],
    visibility = ["//visibility:public"],
)
